fix(TAP-7617): fix by sonar